<resources>
    <string name="app_name">FirstAppFromGB</string>
    <string name="hint_input">0</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="button2">2</string>
    <string name="button1">1</string>
    <string name="button3">3</string>
    <string name="buttonCE">CE</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button_del">DEL</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button_equal">=</string>
    <string name="button_change_sign">+/-</string>
    <string name="button0">0</string>
    <string name="button_dot">.</string>

    <string name="theme_one">Текущая тема</string>
    <string name="theme_two">Противоположная тема</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="apply">Применить</string>
</resources>