<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_picture"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/historyTextSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/inputTextSize"
            android:hint="@string/hint_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:layout_marginEnd="@dimen/marginCalculatorButton"
            app:layout_constraintEnd_toStartOf="@+id/multiply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:layout_marginStart="@dimen/marginCalculatorButton"
            android:layout_marginEnd="@dimen/marginCalculatorButton"
            app:layout_constraintEnd_toStartOf="@+id/plus"
            app:layout_constraintStart_toEndOf="@+id/division"
            app:layout_constraintTop_toBottomOf="@id/result" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:layout_marginStart="@dimen/marginCalculatorButton"
            android:layout_marginEnd="@dimen/marginCalculatorButton"
            app:layout_constraintEnd_toStartOf="@+id/minus"
            app:layout_constraintStart_toEndOf="@+id/multiply"
            app:layout_constraintTop_toBottomOf="@id/result" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:layout_marginStart="@dimen/marginCalculatorButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/plus"
            app:layout_constraintTop_toBottomOf="@id/result" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            app:layout_constraintEnd_toEndOf="@+id/division"
            app:layout_constraintStart_toStartOf="@+id/division"
            app:layout_constraintTop_toBottomOf="@+id/division" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            app:layout_constraintEnd_toEndOf="@+id/multiply"
            app:layout_constraintStart_toStartOf="@+id/multiply"
            app:layout_constraintTop_toBottomOf="@+id/multiply" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            app:layout_constraintEnd_toEndOf="@+id/plus"
            app:layout_constraintStart_toStartOf="@+id/plus"
            app:layout_constraintTop_toBottomOf="@+id/plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/CE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonCE"
            app:layout_constraintEnd_toEndOf="@+id/minus"
            app:layout_constraintStart_toStartOf="@+id/minus"
            app:layout_constraintTop_toBottomOf="@+id/minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            app:layout_constraintEnd_toEndOf="@+id/button1"
            app:layout_constraintStart_toStartOf="@+id/button1"
            app:layout_constraintTop_toBottomOf="@+id/button1" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/del"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_del"
            app:layout_constraintEnd_toEndOf="@+id/CE"
            app:layout_constraintStart_toStartOf="@+id/CE"
            app:layout_constraintTop_toBottomOf="@+id/CE" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button7"
            app:layout_constraintEnd_toEndOf="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button8"
            app:layout_constraintEnd_toEndOf="@+id/button5"
            app:layout_constraintStart_toStartOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button9"
            app:layout_constraintEnd_toEndOf="@+id/button6"
            app:layout_constraintStart_toStartOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/button_equal"
            app:layout_constraintBottom_toBottomOf="@+id/dot"
            app:layout_constraintEnd_toEndOf="@+id/del"
            app:layout_constraintStart_toStartOf="@+id/del"
            app:layout_constraintTop_toBottomOf="@+id/del" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changeSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_change_sign"
            app:layout_constraintEnd_toEndOf="@+id/button7"
            app:layout_constraintStart_toStartOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button0"
            app:layout_constraintEnd_toEndOf="@+id/button8"
            app:layout_constraintStart_toStartOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_dot"
            app:layout_constraintEnd_toEndOf="@+id/button9"
            app:layout_constraintStart_toStartOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button9"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>